--- a/packages/vector_graphics/pubspec.yaml
+++ b/packages/vector_graphics/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vector_graphics
-description: A vector graphics rendering package for Flutter.
-version: 1.1.9
-homepage: https://github.com/dnfield/vector_graphics
+description: fork from "dnfield/vector_graphics" A vector graphics rendering package for Flutter.
+version: 1.1.9+1
+homepage: https://github.com/tomLeclercqDD/vector_graphics
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
@@ -10,20 +10,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  vector_graphics_codec: 1.1.9
+  vector_graphics_codec: 1.1.9+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-  vector_graphics_compiler: 1.1.9
+  vector_graphics_compiler: 1.1.9+1
 
 # Comment out before publishing
-dependency_overrides:
-  vector_graphics_codec:
-    path: ../vector_graphics_codec
-  vector_graphics_compiler:
-    path: ../vector_graphics_compiler
+#dependency_overrides:
+#  vector_graphics_codec:
+#    path: ../vector_graphics_codec
+#  vector_graphics_compiler:
+#    path: ../vector_graphics_compiler
 
 platforms:
   android:
