--- a/packages/vector_graphics/pubspec.yaml
+++ b/packages/vector_graphics/pubspec.yaml
@@ -18,12 +18,11 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   vector_graphics_compiler: 1.1.9+1
 
-# Comment out before publishing
-#dependency_overrides:
-#  vector_graphics_codec:
-#    path: ../vector_graphics_codec
-#  vector_graphics_compiler:
-#    path: ../vector_graphics_compiler
+dependency_overrides:
+  vector_graphics_codec:
+    path: ../vector_graphics_codec
+  vector_graphics_compiler:
+    path: ../vector_graphics_compiler
 
 platforms:
   android:
